--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,13 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven { url "https://jitpack.io" }
         maven {
             url 'https://maven.fabric.io/public'
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath 'com.google.gms:google-services:3.2.0'
         classpath 'io.fabric.tools:gradle:1.25.1'
     }
@@ -35,16 +36,13 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://jitpack.io" }
         google()
-        maven {
-            url 'https://maven.google.com/'
-        }
+        maven { url "https://jitpack.io" }
     }
 }
 
-ext{
-    buildToolsVersion = '27.0.3'
+ext {
+    buildToolsVersion = "29.0.3"
     compileSdkVersion = 27
     targetSdkVersion = 27
     minSdkVersion = 14
