--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation "com.android.support:support-v4:$androidSupportVersion"
 
 // Third party
+    implementation 'commons-codec:commons-codec:1.7'
     implementation 'commons-lang:commons-lang:2.6'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0@aar'
