--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.duy.text.converter">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -36,8 +35,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
-        android:theme="@style/AppThemeDark"
-        tools:ignore="GoogleAppIndexingWarning">
+        android:theme="@style/AppThemeDark">
 
         <activity
             android:name=".activities.MainActivity"
