--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,11 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.duy.text_converter"
+        applicationId "taco.text_converter"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 401
-        versionName "4.0.1"
+        versionCode 410
+        versionName "4.1.0"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
