Update to AndroidX preference

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,3 +36,8 @@ android {
 
     useLibrary 'org.apache.http.legacy'
 }
+
+dependencies {
+// AndroidX
+    api 'androidx.preference:preference:1.1.1'
+}
