Update gradles, code reformat

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
 
     compileOptions {
-        encoding = 'UTF-8'
+        encoding "UTF-8"
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
