--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,8 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.9'
 
     // Barcode
-    implementation 'com.google.zxing:core:3.4.0'
+    //noinspection GradleDependency
+    implementation 'com.google.zxing:core:3.3.3' //3.4.x requires minSdk 24 to run properly on devices below Nougat
     //noinspection GradleDependency
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0@aar' //4.x requires minSdk 24
 
